# cot-chatbot

./: .gitignore  README.md  constants.py  main.py  main_old.py  pyproject.toml  react-agent.ipynb  requirements.txt  simple_ui.py  test.py  utils.py  web_scrawler.ipynb
data/: COT.csv  faqs_docs.pkl
